apps/plane/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plane
  namespace: plane
  labels:
    app.kubernetes.io/name: plane
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://plane.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Project and issue tracking
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: plane.png
    gethomepage.dev/name: Plane
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plane.lab.paultibbetts.uk`) && PathPrefix(`/spaces/`)
      kind: Rule
      services:
        - name: plane-space
          port: 3000
    - match: Host(`plane.lab.paultibbetts.uk`) && PathPrefix(`/god-mode/`)
      kind: Rule
      services:
        - name: plane-admin
          port: 3000
    - match: Host(`plane.lab.paultibbetts.uk`) && PathPrefix(`/live/`)
      kind: Rule
      services:
        - name: plane-live
          port: 3000
    - match: Host(`plane.lab.paultibbetts.uk`) && (PathPrefix(`/api/`) || PathPrefix(`/auth/`))
      kind: Rule
      services:
        - name: plane-api
          port: 8000
    - match: Host(`plane.lab.paultibbetts.uk`) && PathPrefix(`/uploads`)
      kind: Rule
      services:
        - name: plane-minio
          port: 9000
    - match: Host(`plane.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: plane-web
          port: 3000
  tls: {}
